send  message feature added; peer to peer message send using specific chat is added without socket
