# server/pkg/api/handler/interfaces/chat.go
@@ -6,4 +6,5 @@ type ChatHandler interface {
 	GetRecentChats(ctx *gin.Context)
 	SaveChat(ctx *gin.Context)
 	GetAllMessages(ctx *gin.Context)
+	SaveMessage(ctx *gin.Context)
 }
