# server/pkg/repository/interfaces/chat.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/nikhilnarayanan623/react-go-messenger/server/pkg/api/handler/request"
 	"github.com/nikhilnarayanan623/react-go-messenger/server/pkg/api/handler/response"
+	"github.com/nikhilnarayanan623/react-go-messenger/server/pkg/domain"
 )
 
 type ChatRepository interface {
@@ -13,4 +14,6 @@ type ChatRepository interface {
 	SaveChat(ctx context.Context, user1ID, user2ID uint) (chatID uint, err error)
 	FindAllMessagesByChatAndUserID(ctx context.Context, chatID, userID uint,
 		pagination request.Pagination) ([]response.Message, error)
+	SaveMessage(ctx context.Context, message domain.Message) error
+	FindReceiverOfChatBySenderID(ctx context.Context, chatID, senderID uint) (receiverID uint, err error)
 }
